--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   </header>
   <div class="container">
     <div class="category">
-      <a href="meteorites/index.html"><img src="meteorite.PNG" width="300" height="200" class="right"></a>
+      <a href="https://meteorites-bridges.herokuapp.com/"><img src="meteorite.PNG" width="300" height="200" class="right"></a>
       <a href="https://brynna-imdb.herokuapp.com/"><img src="IMDB.PNG" width="300" height="200" class="right"></a>
-      <a href="Project1/index.html"><img src="boston.PNG" width="300" height="200"></a>
+      <a href="https://bridges-airbnb.herokuapp.com/"><img src="boston.PNG" width="300" height="200"></a>
   </div>
 </div>
 <div class="footer-container">
